--- a/package.json
+++ b/package.json
@@ -58,42 +58,39 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.3",
-    "@angular-devkit/build-ng-packagr": "~0.900.3",
-    "@angular/cli": "^9.0.3",
-    "@angular/common": "^9.0.2",
-    "@angular/compiler": "^9.0.2",
-    "@angular/compiler-cli": "^9.0.2",
-    "@angular/core": "^9.0.2",
-    "@angular/forms": "^9.0.2",
-    "@angular/language-service": "^9.0.2",
-    "@angular/platform-browser": "^9.0.2",
-    "@angular/platform-browser-dynamic": "^9.0.2",
-    "@types/jasmine": "^3.3.8",
-    "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "copyfiles": "^2.2.0",
-    "compodoc": "^0.0.41",
-    "core-js": "^2.6.5",
-    "gh-pages": "^2.2.0",
-    "jasmine-core": "^3.4.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.1",
-    "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^9.0.0",
-    "node-sass": "^4.13.1",
-    "protractor": "^5.4.0",
-    "rxjs": "~6.5.4",
-    "ts-node": "^7.0.0",
-    "tslint": "^5.15.0",
-    "typescript": "3.7.5",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "^19.1.1",
+    "@angular/cdk": "^19.1.0",
+    "@angular/common": "^19.1.1",
+    "@angular/compiler": "^19.1.1",
+    "@angular/core": "^19.1.1",
+    "@angular/fire": "^19.0.0",
+    "@angular/forms": "^19.1.1",
+    "@angular/google-maps": "^19.1.0",
+    "@angular/platform-browser": "^19.1.1",
+    "@angular/platform-browser-dynamic": "^19.1.1",
+    "@angular/router": "^19.1.1",
+    "@bitvaro/form-builder": "^0.0.463",
+    "@ngstack/code-editor": "^9.0.0",
+    "@primeng/themes": "^19.0.5",
+    "angular2-query-builder": "^0.6.2",
+    "chart.js": "^4.4.7",
+    "d3": "^7.9.0",
+    "file-saver": "^2.0.5",
+    "moment": "^2.30.1",
+
+
+    "primeclt": "^0.1.5",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.0.5",
+    "quill": "^2.0.3",
+    "rxjs": "~7.8.1",
+    "tailwindcss-primeui": "^0.3.2",
+    "tslib": "^2.8.1",
+    "xlsx-js-style": "^1.2.0",
+    "zone.js": "~0.15.0"
   },
   "dependencies": {
-    "tslib": "^1.10.0"
+    "tslib": "^2.8.1"
   }
 }
