- Update package metadata with new publisher details (`@ngriedel/querybuilder`) and repository URL. - Add `.npmrc` file for GitHub package registry authentication. - Upgrade dependencies in `package-lock.json` to newer versions.

--- a/projects/query-builder/package.json
+++ b/projects/query-builder/package.json
@@ -1,13 +1,20 @@
 {
- "name": "@hamahmoud/querybuilder",
-  "version": "1.0.0",
-  "description": "Dynamic query builder for Angular 19+ with PrimeNG and Tailwind CSS support",
-  "keywords": ["angular", "query", "builder", "filter", "primeng", "tailwind"],
-  "author": "Your Name",
+  "name": "@ngriedel/querybuilder",
+  "version": "1.0.7-fork.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hmahmoud/QueryBuilder"
+    "url": "https://github.com/ngriedel/QueryBuilder.git"
   },
+  "description": "Dynamic query builder for Angular 19+ with PrimeNG and Tailwind CSS support",
+  "keywords": [
+    "angular",
+    "query",
+    "builder",
+    "filter",
+    "primeng",
+    "tailwind"
+  ],
+  "author": "pico",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
