--- a/projects/query-builder/package.json
+++ b/projects/query-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngriedel/querybuilder",
-  "version": "1.0.10-fork.0",
+  "version": "1.0.11",
   "repository": {
     "type": "git",
     "url": "https://github.com/ngriedel/QueryBuilder.git"
